tests/snapshots/run_wpt_conformance__litert_cos_float16_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cos.https.any.js",
    "cos float16 4D tensor",
    "litert",
    "PASS",
)
