tests/snapshots/run_wpt_conformance__litert_cos_float32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 52
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cos.https.any.js",
    "cos float32 2D tensor",
    "litert",
    "PASS",
)
