tests/snapshots/run_wpt_conformance__litert_cos_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cos.https.any.js",
    "cos float32 4D tensor",
    "litert",
    "PASS",
)
