tests/snapshots/run_wpt_conformance__litert_cumulativeSum_with_float16_input_and_default_options_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cumulative_sum.https.any.js cumulativeSum with float16 input and default options., litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    cumulativeSumInput: f16[1, 1, 3, 4];
  }

  nodes {
    [cumulativeSumOutput] = cumulativeSum(cumulativeSumInput, exclusive=false, label="", reversed=false);
  }

  outputs { cumulativeSumOutput; }
}
